Solucionado el front

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -6,7 +6,7 @@
   
 }
 
-.logo-spiner {
+/* .logo-spiner {
   height: 16em;
   padding: .5em;
   will-change: transform;
@@ -21,6 +21,6 @@
 .logo {
   height: 10em;
   background-color: transparent;
-}
+} */
 
 
