actualizacion de css landing, paleta y logo nuevo

--- a/Client/src/components/Landing/Utils/Searchbar.css
+++ b/Client/src/components/Landing/Utils/Searchbar.css
@@ -1,7 +1,12 @@
 .search {
     display: flex;
+    align-items: center;
 }
 
 .container-inputs {
-    padding: 0.5em;
+    padding: 0.2em;
+}
+
+.searchButton {
+height:50px;
 }
