--- a/Client/src/components/Landing/Landing.css
+++ b/Client/src/components/Landing/Landing.css
@@ -32,45 +32,6 @@
     background-color: red;
 }
 
-.Card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    width: 300px;
-    height: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    margin: 1em;
-  }
-  
-  .Card img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
-  .Card span {
-    display: block;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .Card span:first-child {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
-  .Card span:nth-child(3) {
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .Card span:last-child {
-    color: #555;
-  }
-  
+.goHome {
+  padding: .5em;
+}
