--- a/Client/src/components/Landing/Landing.css
+++ b/Client/src/components/Landing/Landing.css
@@ -2,17 +2,25 @@
     width: 100%;
     height: 100vh;
     background-color: #F4F4F6;
+    align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+    
 }
 
 .landing{
     display: flex;
     align-items: center;
     flex-direction: column;
+    align-items: center;
+  justify-content: center;
 }
 
-.button {
+.container button {
   display: flex;
   flex-direction: row;
+  margin: 1em;
 }
 .container-logo{
   display: flex;
