--- a/Client/src/components/Landing/Landing.css
+++ b/Client/src/components/Landing/Landing.css
@@ -6,7 +6,20 @@
   justify-content: center;
   display: flex;
   flex-direction: column;
-    
+}
+
+.containerLogin{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  background: rgba(0,0,0,0.5);
+  z-index: 10;
 }
 
 .landing{
