--- a/Client/src/components/Landing/Landing.css
+++ b/Client/src/components/Landing/Landing.css
@@ -1,20 +1,23 @@
 .container {
-    width: 100%;
-    height: 100vh;
-    background-color: #F4F4F6;
-    align-items: center;
-  justify-content: center;
+  width: 100%;
+  min-height: 100vh;
   display: flex;
+  flex-wrap: wrap; /* Permite que los elementos hagan wrap cuando no caben en una fila */
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-    
 }
 
-.landing{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    align-items: center;
+.landing {
+  display: flex;
+  flex-wrap: wrap; /* Asegura que los elementos en el interior también hagan wrap cuando sea necesario */
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0.1em;
 }
 
 .container button {
@@ -22,24 +25,31 @@
   flex-direction: row;
   margin: 1em;
 }
-.container-logo{
+
+.container-logo {
   display: flex;
+  flex-wrap: wrap; /* Asegura que los elementos hagan wrap cuando no caben en una fila */
+  align-items: center;
+  justify-content: center;
 }
+
 .logo {
-    width: 400px;
+  width: 100%;
+  max-width: 300px;
 }
+
 .logo2 {
-  width: 100px;
+  width: 200px;
 }
 
 .landing .button {
-    margin: 1em;
+  margin: 1em;
 }
 
-.landing .Card .span{
-    background-color: red;
+.landing .Card .span {
+  background-color: red;
 }
 
 .goHome {
-  padding: .5em;
+  padding: 0.5em;
 }
