--- a/Client/src/components/Landing/Utils/LocationSelector/LocationSelector.module.css
+++ b/Client/src/components/Landing/Utils/LocationSelector/LocationSelector.module.css
@@ -1,6 +1,10 @@
 .contSelects{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+  justify-content: center;
+  gap:1em;
 }
 
 .input {
