--- a/Client/src/components/PaymentsCard/PaymentsCard.module.css
+++ b/Client/src/components/PaymentsCard/PaymentsCard.module.css
@@ -1,12 +1,14 @@
 .contentAll{
-    border: 1px solid grey;
+    /* border: 1px solid grey; */
     border-radius: 10px;
-    background-color: rgb(207, 217, 218);
+    background-color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 14rem 10rem 10rem 10rem;
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    margin-top: 1rem;
+    box-shadow: 3px 3px 10px black;
 }
 img{
     width: 6rem;
