--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,24 +1,17 @@
-/* Estilos generales para todas las pantallas */
-.App {
-  background-color: #F4F4F6;
-  margin: 0;
-  padding: 0;
-  font-family: 'Poppins', sans-serif;
+
+
+#cover {
+  background: rgb(170,54,124);
+  background: linear-gradient(90deg, rgba(170,54,124,0.8) 0%, rgba(74,47,189,0.8) 100%);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; /* Hace que el contenedor ocupe el 100% de la altura de la pantalla */
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-/* Estilos para pantallas medianas y grandes */
-@media (min-width: 768px) {
-  .App {
-      flex-direction: row; /* Cambia la dirección de los elementos en filas a columnas */
-  }
-
-  #root {
-      text-align: center;
-      flex: 1; /* Hace que #root ocupe el espacio restante */
-  }
+.particlesCover{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: translateZ(0);
 }
