--- a/Client/src/components/Footer/Footer.css
+++ b/Client/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   width: 100%;
-  background: #3586ff;
+  background:  #E69705;;
   min-height: 100px;
   padding: 20px 5%; /* Utiliza porcentajes para el padding para que se ajuste al ancho de la pantalla */
   display: flex;
@@ -64,7 +64,7 @@
   left: 0;
   width: 100%;
   height: 100px;
-  background: url('https://i.ibb.co/wQZVxxk/wave.png');
+  background: url('../../assets/footerConnectify.png');
   background-size: 1000px 100px;
 }
 
@@ -72,28 +72,28 @@
   z-index: 10;
   opacity: 1;
   bottom: 0;
-  animation: animateWaves 4s linear infinite;
+  animation: animateWaves 8s linear infinite;
 }
 
 .wave#wave2 {
   z-index: 9;
   opacity: 0.5;
   bottom: 10px;
-  animation: animate 4s linear infinite !important;
+  animation: animate 8s linear infinite !important;
 }
 
 .wave#wave3 {
   z-index: 10;
   opacity: 0.2;
   bottom: 15px;
-  animation: animateWaves 3s linear infinite;
+  animation: animateWaves 6s linear infinite;
 }
 
 .wave#wave4 {
   z-index: 9;
   opacity: 0.7;
   bottom: 20px;
-  animation: animate 3s linear infinite;
+  animation: animate 6s linear infinite;
 }
 
 @keyframes animateWaves {
