--- a/Client/src/components/Footer/Footer.css
+++ b/Client/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   width: 100%;
-  background:  #E69705;;
+  background: #3B7BA4;
   min-height: 100px;
   padding: 20px 5%; /* Utiliza porcentajes para el padding para que se ajuste al ancho de la pantalla */
   display: flex;
