--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -15,3 +15,10 @@
   height: 100%;
   transform: translateZ(0);
 }
+
+.App,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
