--- a/Client/src/components/Footer/Team/Team.module.css
+++ b/Client/src/components/Footer/Team/Team.module.css
@@ -1,128 +1,127 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
-
 :root {
-  --yellow: #ffdd40;
-  --dark: #2f313a;
-  --deg: -86deg;
-  --trans: all 0.4s ease 0s;
+  --team-yellow: #ffdd40;
+  --team-dark: #2f313a;
+  --team-deg: -86deg;
+  --team-trans: all 0.4s ease 0s;
 }
 
-.content {
+.team-content {
   font-family: 'Lato', Arial, Helvetica, serif;
-  background: linear-gradient(90deg, #131417, var(--dark) 35% 65%, #131417);
+  background: linear-gradient(
+    90deg,
+    #131417,
+    var(--team-dark) 35% 65%,
+    #131417
+  );
   font-size: 1em;
 }
 
-h1 {
+.team-title {
   text-align: center;
-  color: var(--yellow);
+  color: var(--team-yellow);
 }
 
-h2 {
-  text-align: center;
-}
-
-.team {
+.team-container {
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Centra verticalmente */
-  align-items: center; /* Centra horizontalmente */
+  justify-content: center;
+  align-items: center;
   padding: 2em 0 2em 2.5em;
   margin: 0;
 }
 
-.member {
+.team-member {
   margin: 1.5em 0 0.5em;
   padding: 0.73em;
   background: linear-gradient(
     83deg,
-    var(--yellow) 0 97%,
+    var(--team-yellow) 0 97%,
     #fff0 calc(97% + 1px) 100%
   );
   position: relative;
   list-style: none;
   display: inline-block;
   transform: scale(0.85);
-  transition: var(--trans);
+  transition: var(--team-trans);
 }
 
-.member:nth-of-type(even) {
+.team-member:nth-of-type(even) {
   text-align: right;
   background: linear-gradient(
     -83deg,
-    var(--yellow) 0 97%,
+    var(--team-yellow) 0 97%,
     #fff0 calc(97% + 1px) 100%
   );
 }
 
-.thumb {
+.team-thumb {
   width: 13vmin;
   height: 13vmin;
   float: left;
   margin-right: 1.25em;
   background: linear-gradient(
-    var(--deg),
-    var(--dark) 0 70%,
-    var(--yellow) 0% 100%
+    var(--team-deg),
+    var(--team-dark) 0 70%,
+    var(--team-yellow) 0% 100%
   );
   transform: rotate(-4deg);
-  transition: var(--trans);
+  transition: var(--team-trans);
   border-radius: 0.25em;
   overflow: hidden;
   margin-left: -3em;
   padding: 0.5em;
 }
 
-.member:nth-of-type(even) .thumb {
-  --deg: 86deg;
+.team-member:nth-of-type(even) .team-thumb {
+  --team-deg: 86deg;
   float: right;
   margin-left: 2em;
   margin-right: -3em;
   transform: rotate(4deg);
 }
 
-.thumb img {
+.team-thumb img {
   width: 100%;
   height: 100%;
   border-radius: 0.25em;
   filter: grayscale(1);
-  background: var(--dark);
+  background: var(--team-dark);
 }
 
-.member:hover {
+.team-member:hover .team-thumb img {
+  filter: none;
+  transition: var(--team-trans);
+}
+
+.team-member:hover {
   transform: scale(1);
-  transition: var(--trans);
+  transition: var(--team-trans);
   filter: drop-shadow(0px 20px 10px #0008);
 }
 
-.member:hover .thumb {
+.team-member:hover .team-thumb {
   padding: 0.1em;
-  transition: var(--trans);
+  transition: var(--team-trans);
   transform: rotate(-1deg);
-  --deg: -89deg;
+  --team-deg: -89deg;
 }
 
-.member:nth-of-type(even):hover .thumb {
-  --deg: 91deg;
+.team-member:nth-of-type(even):hover .team-thumb {
+  --team-deg: 91deg;
 }
 
-.member:hover .thumb img {
-  filter: none;
-  transition: var(--trans);
-}
-
-.description {
+.team-description {
   padding-top: 1vmin;
 }
 
-.description p {
+.team-description p {
   padding: 0 2em;
   margin-bottom: 1em;
   white-space: pre-line;
 }
 
-h3 {
-  background: linear-gradient(182deg, #fff0 60%, var(--dark) 0 100%);
+.team-member-title {
+  background: linear-gradient(182deg, #fff0 60%, var(--team-dark) 0 100%);
   display: inline;
   transform: rotate(-2deg);
   position: absolute;
@@ -130,64 +129,65 @@ h3 {
   margin-top: -2.25em;
   left: 9vmin;
   padding: 0.5em 0.75em;
-  color: var(--yellow);
+  color: var(--team-yellow);
   border-radius: 0.25em;
   font-size: 1.8em;
   transform-origin: left bottom;
 }
 
-.member:nth-of-type(even) h3 {
+.team-member:nth-of-type(even) .team-member-title {
   left: inherit;
   right: 9vmin;
   transform: rotate(2deg);
   transform-origin: right bottom;
-  background: linear-gradient(-182deg, #fff0 60%, var(--dark) 0 100%);
+  background: linear-gradient(-182deg, #fff0 60%, var(--team-dark) 0 100%);
 }
 
-.member:hover h3 {
-  transition: var(--trans);
+.team-member:hover .team-member-title {
+  transition: var(--team-trans);
   transform: rotate(0deg);
-  background: linear-gradient(180deg, #fff0 59%, var(--dark) 0 100%);
+  background: linear-gradient(180deg, #fff0 59%, var(--team-dark) 0 100%);
 }
 
-.co-funder:after {
+.team-co-funder:after {
   content: 'CO-FUNDER';
   font-size: 0.75em;
   position: absolute;
   top: -1.5em;
-  background: var(--yellow);
+  background: var(--team-yellow);
   right: 4em;
   transform: rotate(3deg);
   padding: 0.35em 0.75em 0.5em;
   border-radius: 0.25em;
-  color: var(--dark);
+  color: var(--team-dark);
   font-weight: bold;
 }
 
-.co-funder:nth-of-type(even):after {
+.team-co-funder:nth-of-type(even):after {
   right: inherit;
   left: 4em;
   transform: rotate(-3deg);
 }
 
-.description p a {
+.team-description p a {
   display: inline-block;
   margin: 0.5em 0 0 0;
-  background: var(--dark);
-  color: var(--yellow);
+  background: var(--team-dark);
+  color: var(--team-yellow);
   padding: 0.1em 0.5em 0.35em;
   border-radius: 0.5em;
   text-decoration: none;
-  transition: var(--trans);
+  transition: var(--team-trans);
 }
-.description p a:hover {
-  transition: var(--trans);
-  color: var(--dark);
+
+.team-description p a:hover {
+  transition: var(--team-trans);
+  color: var(--team-dark);
   background: #f8fff4;
   font-weight: bold;
 }
 
-.description p a img {
+.team-description p a img {
   float: left;
   width: 22px;
   filter: invert(1);
