--- a/Client/src/components/CommentsClient/Comments.module.css
+++ b/Client/src/components/CommentsClient/Comments.module.css
@@ -1,4 +1,4 @@
-.textarea {
+/* .textarea {
     width: 100%;
     min-height: 100px;
     padding: 8px;
@@ -18,4 +18,4 @@
     margin-top: 16px;
     cursor: pointer;      
   }
-
+ */
