Cambios z-index y overflow

--- a/Client/src/components/Landing/Landing.module.css
+++ b/Client/src/components/Landing/Landing.module.css
@@ -1,4 +1,9 @@
-
+.contLanding {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  /* border: 3px solid blue; */
+}
   
 .contenedorLanding {
   /* background-color: yellow; */
