--- a/Client/src/components/Cover/Cover.module.css
+++ b/Client/src/components/Cover/Cover.module.css
@@ -1,13 +1,20 @@
 /* .home {
   clip-path: url(#cache);
+  overflow: hidden;
 } */
-
+.contCover {
+  /* border: 4px solid red; */
+  overflow: hidden;
+  z-index: 1;
+}
 .homeAnim {
+  /* overflow: hidden; */
   position: absolute; /* Asegura que el SVG tenga una posición absoluta */
   top: 0;
   left: 0;
   width: 100%;
-  overflow: hidden;
+  /* height: 100%; */
+  /* overflow: hidden; */
 }
 .red {
   fill: none;
