--- a/Client/src/components/Card/Professional.module.css
+++ b/Client/src/components/Card/Professional.module.css
@@ -1,135 +1,167 @@
-
-.profilePic{
-  width:12em;
-  height:12em;
-  margin:auto;
-  margin-top:-6em;
-  background:url(http://celebrityinside.com/wp-content/uploads/2014/09/George-Clooney.jpeg);
-  background-size:cover;
-  border-radius:50%;
-  box-shadow:0px 0px 0px 4pt #FFF;
-  } 
-.profile h3{
-color:#03315c;  
-font-family: 'Roboto', sans-serif;
-text-align:center;
-font-size:1.6em;
-margin-bottom:0;
+.backgroundContainer {
+  background: #fff;
+  left: 0;
+  right: 0;
+  top: 6em;
+  bottom: 0;
+  margin: auto;
+  width: 20em;
+  height: 30em;
+  margin: 0 0 0 0;
+  border-radius: 0.51em;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
-.profile h4{
-color:#56013d;  
-font-family: 'Roboto', sans-serif;
-text-align:center;
-font-size:1em;
-margin-top:0.5em;
-}   
-.rates{
-position:absolute;
-width:25em;
-height:8em;
-bottom:-0.2em;
-background:#03315c; 
-border-bottom-left-radius: 0.51em;
-border-bottom-right-radius: 0.51em;
-overflow:hidden;
-  }
-.profile p{
-  width:15em;
-  height:5em;
-  font-size:1.2em;
-  margin:auto;
-  font-family: 'Roboto', sans-serif;
-  color:rgba(0,0,0,0.6);
-  margin-top:2.5em;
-  }
-.box{
-width:8.33333333333em;
-height:8.33333333333em;
-float:left; 
-overflow:hidden;
-position:relative;
-  } 
-svg{
-position:absolute;  
-  }
-.iconCon{
-position:relative;
-width:5em;
-height:5em;
-margin:auto;
-z-index:999;  
-  }
-.box h4{
-color:#FFF;
-font-size:2em;
-margin-top:0;
-z-index:999999; 
-  } 
-.iconCon .icon{
-  width:3em;
-height:3em;
-left:0;
-right:0;
-top:0;
-bottom:0;
-margin:auto;
-fill:#FFF;
-z-index:999;
-  }
-.iconCon .ball{
-  position:Absolute;
-  width:1em;
-height:1em;
-left:0;
-right:0;
-top:0;
-bottom:0;
-margin:auto;
-background:Red;
-border-radius:50%;
-transition:ease 0.5s;
-  } 
-.h4h{
-position:absolute;  
-left:0;
-right:0;
-margin:auto;
-  }   
-.box:hover{
-box-shadow:0px 0px 0px 1px rgba(0,0,0,0.3); 
-  } 
-.boxhearth:hover .icon{
-  fill:red;
-  }
-.box:hover{
-  cursor:pointer;
+.backgroundContainer:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
-.boxview:hover .icon{
-  fill:#3399FF;
-  }
-.boxbuddy:hover .icon{
-  fill:#FFCC99;
-  } 
-.proPage{
-position:absolute;
-top:1em;
-height:3em;
-width:3em;  
-  }
-.ExitPage{
-  left:1em;
-  }
-.homePage{
-right:1em;  
-  }   
-.proPage .icon{
-  height:2em;
-width:2em;
-left:0;right:0;top:0;bottom:0;margin:auto;
-fill:#03315c;
-  } 
-.proPage .icon:hover{
-  fill:#1c69b0;
-  cursor:pointer;
 
-  } 
+
+.profilePic {
+  width: 12em;
+  height: 12em;
+  margin-top: -3.5em;
+  margin-left: 4em;
+  background-size: cover;
+  border-radius: 50%;
+  box-shadow: 0px 0px 6px 7pt #fff;
+}
+.h3 {
+  color: #03315c;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 1.6em;
+  margin-top: 0.2em;
+}
+.h4 {
+  color: #56013d;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 1em;
+  margin-top: -2em;
+}
+
+.h5 {
+  color: #03315c;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 1.3em;
+  margin-top: -1em;
+ 
+}
+.description{
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 1em;
+  margin-top: -1em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
+
+.rates {
+  position: absolute;
+  width: 100%;
+  height: 3em;
+  bottom: 0;
+  background: #03315c;
+  border-bottom-left-radius: 0.51em;
+  border-bottom-right-radius: 0.51em;
+}
+
+.box {
+  width: 8.33333333333em;
+  height: 8.33333333333em;
+  float: left;
+  overflow: hidden;
+  position: relative;
+}
+svg {
+  position: absolute;
+}
+.iconCon {
+  position: relative;
+  width: 5em;
+  height: 5em;
+  margin: auto;
+  z-index: 999;
+}
+/* .box h4 {
+  color: #fff;
+  font-size: 2em;
+  margin-top: 0;
+  z-index: 999999;
+} */
+.iconCon .icon {
+  width: 3em;
+  height: 3em;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  fill: #fff;
+  z-index: 999;
+}
+.iconCon .ball {
+  position: Absolute;
+  width: 1em;
+  height: 1em;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: Red;
+  border-radius: 50%;
+  transition: ease 0.5s;
+}
+.h4h {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.box:hover {
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.3);
+}
+.boxhearth:hover .icon {
+  fill: red;
+}
+.box:hover {
+  cursor: pointer;
+}
+.boxview:hover .icon {
+  fill: #3399ff;
+}
+.boxbuddy:hover .icon {
+  fill: #ffcc99;
+}
+.proPage {
+  position: absolute;
+  top: 1em;
+  height: 3em;
+  width: 3em;
+}
+.ExitPage {
+  left: 1em;
+}
+.homePage {
+  right: 1em;
+}
+.proPage .icon {
+  height: 2em;
+  width: 2em;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  fill: #03315c;
+}
+.proPage .icon:hover {
+  fill: #1c69b0;
+  cursor: pointer;
+}
