--- a/Client/src/views/Home/Home.module.css
+++ b/Client/src/views/Home/Home.module.css
@@ -9,20 +9,23 @@ Cover {
 }
 
 .card {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1em;
-  justify-items: center;
-  align-items: center;
+  
+    display: grid;
+    grid-template-columns: repeat(3, 7fr);
+    gap: 5em;
+    padding: 4em;
+    grid-row-gap:2em;
 }
 
 /* Establece un ancho máximo para la cuadrícula para evitar que los elementos se estiren demasiado en pantallas grandes */
 @media (min-width: 1200px) {
   .card {
-    grid-template-columns: repeat(
-      3,
-      1fr
-    ); /* Cambia a 4 columnas en pantallas más grandes */
+    display: grid;
+    grid-template-columns: repeat(3, 7fr);
+    gap: 5em;
+    padding: 4em;
+    grid-row-gap:7em;
+    /* Cambia a 4 columnas en pantallas más grandes */
   }
 }
 
@@ -49,7 +52,7 @@ Cover {
 }
 
 .filterStyle {
-  background-color: rgba(12, 214, 241, 0.432);
+  /* background-color: rgba(12, 214, 241, 0.432); */
   /* background: linear-gradient(to right, rgba(173, 216, 230, 0.349), rgba(74, 74, 238, 0.274),rgba(158, 101, 158, 0.11));
   box-shadow: 0rem 0rem 2rem rgba(38, 125, 224, 0.425); */
   display: flex;
@@ -99,7 +102,6 @@ Cover {
   width: 20%;
 } */
 
-
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
@@ -113,96 +115,94 @@ Cover {
   display: flex;
   justify-content: center;
   align-items: center;
-  }
-  .contProf2 {
-    margin-left: 0rem;
-    
-  }
-  
-  .labelProf {
-    /* background-color: blueviolet; */
-    position: absolute;
-    pointer-events: none;
-    margin-left: -6rem;
-    margin-top: 1.5rem;
-    /* left: 24.5rem; */
-    /* top: 7.5rem; */
-    transform: translateY(-50%);
-    font-size: 16px;
-    color: #555;
-    transition: 0.2s ease-out;
-    z-index: 100;
-  }
+}
+.contProf2 {
+  margin-left: 0rem;
+}
 
-  .contentselect {
-    /* background-color: blue; */
-    margin-left: 0rem;
-    display: flex;
-    flex-direction: row;
-  }
+.labelProf {
+  /* background-color: blueviolet; */
+  position: absolute;
+  pointer-events: none;
+  margin-left: -6rem;
+  margin-top: 1.5rem;
+  /* left: 24.5rem; */
+  /* top: 7.5rem; */
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #555;
+  transition: 0.2s ease-out;
+  z-index: 100;
+}
 
-  
-/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
-/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
-/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
-/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
-/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
+.contentselect {
+  /* background-color: blue; */
+  margin-left: 0rem;
+  display: flex;
+  flex-direction: row;
+}
 
+/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
+/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
+/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
+/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
+/* ::::::::::::::::::::::::::::::::::::::::::::::::: */
 
 .selectCss {
   /* background-color: red; */
-	display: block;
-	font-size: 14px;
-	font-family: 'Verdana', sans-serif;
-	font-weight: 400;
-	color: #444;
-	line-height: 1.3;
-	padding: .4em 1.4em .3em .8em;
-	width: 15rem;
-	max-width: 100%; 
-	box-sizing: border-box;
- /* margin: 5rem auto; */
- margin-left: 2rem;
-	border: 1px solid #aaa;
-	box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
-	border-radius: .3em;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	appearance: none;
-	background-color: #fff;
-	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-	  linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
-	background-repeat: no-repeat, repeat;
-	background-position: right .7em top 50%, 0 0;
-	background-size: .65em auto, 100%;
+  display: block;
+  font-size: 14px;
+  font-family: "Verdana", sans-serif;
+  font-weight: 400;
+  color: #444;
+  line-height: 1.3;
+  padding: 0.4em 1.4em 0.3em 0.8em;
+  width: 15rem;
+  max-width: 100%;
+  box-sizing: border-box;
+  /* margin: 5rem auto; */
+  margin-left: 2rem;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.03);
+  border-radius: 0.3em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),
+    linear-gradient(to bottom, #ffffff 0%, #f7f7f7 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
 }
 .selCity {
   margin-left: 0.5rem;
 }
 
-
 .selectCss::-ms-expand {
-	display: none;
+  display: none;
 }
 .selectCss:hover {
-	border-color: #888;
+  border-color: #888;
 }
 .selectCss:focus {
-	border-color: #aaa;
-	box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
-	box-shadow: 0 0 0 3px -moz-mac-focusring;
-	color: #222; 
-	outline: none;
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
 }
 .selectCss option {
-	font-weight:normal;
+  font-weight: normal;
 }
 
-
-.classOfElementToColor:hover {background-color:red; color:black}
+.classOfElementToColor:hover {
+  background-color: red;
+  color: black;
+}
 
 .selectCss option[selected] {
-    background-color: orange;
+  background-color: orange;
 }
 
 .contPrecios {
@@ -210,7 +210,7 @@ Cover {
   margin-left: 1rem;
   display: flex;
   flex-direction: column;
-  width: 12rem;
+  width: 13rem;
 }
 
 .contMinMax {
@@ -234,11 +234,11 @@ Cover {
 }
 .selectOrder {
   margin-left: 0.5rem;
-  width: 11rem;
+  width: 9rem;
 }
 
 .contRemoto {
-  width: 6rem;
+  width: 8rem;
   margin-left: -0.5rem;
 }
 
@@ -283,9 +283,8 @@ Cover {
   animation: sh02 0.5s 0s linear;
 }
 
-
 .applyFilter::before {
-  content: '';
+  content: "";
   display: block;
   width: 0px;
   height: 86%;
@@ -343,4 +342,3 @@ Cover {
   align-items: center;
   margin-top: 0.2rem;
 }
-
